add start scene

--- a/game.html
+++ b/game.html
@@ -16,6 +16,7 @@
         <script src="object/paddle.js"></script>
 
         <script src="scene/guagame.js"></script>
+        <script src="scene/start.js"></script>
         <script src="scene/play.js"></script>
         <script src="scene/end.js"></script>
 
